--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author-name:    Minjong Kim
 author-image:   profile.jpg
 author-job:     Robot Engineer
 author-email:   your-email@domain.com # Add your email for contant form.
-author-twitter: artemsheludko_ # Add your twitter account
+author-twitter: # Add your twitter account
 about-author:   I am a Robot Engineer
 
 # Social settings
