--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
-title: Welcome to Flexton
+title: The anecdotes
 description: Flexton is a responsive and ultra-minimal theme for Jekyll.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://tlemsl.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author
-author-name:    Clayton Hanson
+author-name:    Min jong Kim
 author-image:   1.jpg
-author-job:     Web Developer
-author-email:   your-email@domain.com # Add your email for contant form.
-author-twitter: artemsheludko_ # Add your twitter account
-about-author:   I am a web developer focusing on front-end development. Always hungry to keep learning.
+author-job:     Robot Engineer
+author-email:   tlemsl@dgist.ac.kr# Add your email for contant form.
+author-twitter: # Add your twitter account
+about-author:   Robot Engineer
 
 # Social settings
-social-twitter:   artemsheludko_
+social-twitter:
 social-facebook:
 social-github:    artemsheludko
-social-pinterest: artemsheludko
-social-instagram: artemsheludko_
+social-pinterest: tlemsl
+social-instagram:
 social-youtube:
 social-vk:
 social-linkedin:
