--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,10 @@ description: >-                        # used by seo meta and the atom feed
 url: 'https://tlemsl.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: tlemsl             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username:            # change to your twitter username
 
 social:
   # Change to your full name.
@@ -40,8 +40,8 @@ social:
   email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    # - https://twitter.com/username      # change to your twitter homepage
+    - https://github.com/tlemsl       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
