--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ timezone: Asia/Seoul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: The anecdotes                          # the main title
+title: The anecdotes                      # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Robot Enginner   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
@@ -28,20 +28,20 @@ description: >-                        # used by seo meta and the atom feed
 url: 'https://tlemsl.github.io'
 
 github:
-  username: tlemsl          # change to your github username
+  username: tlemsl           # change to your github username
 
 twitter:
-  username:            # change to your twitter username
+  username: twitter_username            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: mj
   email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    # - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/tlemsl     # change to your github homepage
+    - https://twitter.com/username      # change to your twitter homepage
+    - https://github.com/tlemsl      # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -71,7 +71,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode:    [light|dark]
+theme_mode:   # [light|dark]
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
