--- a/_config.yml
+++ b/_config.yml
@@ -10,17 +10,17 @@ exclude:
 
 # Site settings
 title: The anecdotes
-subtitle: "Anecdotes"
-email: blcentra@gmail.com
+subtitle: "Anecdotes of my life"
+email: tlemsl@dgist.ac.kr
 name: kmj
 description: >
-  A simple yet classy theme for your Jekyll website or blog.
+  making blog
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://tlemsl.github.io" # the base hostname & protocol for your site
-cover: "/assets/header_image.jpg"
+cover: "/assets/profile.jpg"
 logo: "/assets/logo.png"
 
 # Build settings
