--- a/_config.yml
+++ b/_config.yml
@@ -76,19 +76,19 @@ descriptions:
 #     desc: Follow me on Twitter            # Description to display as link title, etc
 #     share: true                           # Include in the "Share" section of posts
 social:
-  - name: Twitter
-    icon: twitter
-    username:
-    url: https://twitter.com/TheBenCentra
-    desc: Follow me on Twitter
-    share: true
+  #- name: Twitter
+  #  icon: twitter
+  #  username:
+  #  url: https://twitter.com/TheBenCentra
+  #  desc: Follow me on Twitter
+  #  share: true
 
-  - name: Facebook
-    icon: facebook
-    username: thebencentra
-    url: ""
-    desc: Friend me on Facebook
-    share: true
+  #- name: Facebook
+  #  icon: facebook
+  #  username: thebencentra
+  #  url: ""
+  #  desc: Friend me on Facebook
+  #  share: true
 
   - name: GitHub
     icon: github
@@ -97,47 +97,47 @@ social:
     desc: Fork me on GitHub
     share: false
 
-  - name: LinkedIn
-    icon: linkedin
-    username: ""
-    url: ""
-    desc: Connect with me on LinkedIn
-    share: true
+  #- name: LinkedIn
+  #  icon: linkedin
+  #  username: ""
+  #  url: ""
+  #  desc: Connect with me on LinkedIn
+  #  share: true
 
-  - name: Google+
-    icon: google-plus
-    username: ""
-    url: ""
-    desc: Add me to your Circles
-    share: true
+  #- name: Google+
+  #  icon: google-plus
+  #  username: ""
+  #  url: ""
+  #  desc: Add me to your Circles
+  #  share: true
 
-  - name: YouTube
-    icon: youtube
-    username: ""
-    url: ""
-    desc: Subscribe on YouTube
-    share: false
+  #- name: YouTube
+  #  icon: youtube
+  #  username: ""
+  #  url: ""
+  #  desc: Subscribe on YouTube
+  #  share: false
 
-  - name: Instagram
-    icon: instagram
-    username: ""
-    url: ""
-    desc: Follow me on Instagram
-    share: false
+  #- name: Instagram
+  #  icon: instagram
+  #  username: ""
+  #  url: ""
+  #  desc: Follow me on Instagram
+  #  share: false
 
-  - name: Pinterest
-    icon: pinterest
-    username: ""
-    url: ""
-    desc: Follow me on Pinterest
-    share: true
+  #- name: Pinterest
+  #  icon: pinterest
+  #  username: ""
+  #  url: ""
+  #  desc: Follow me on Pinterest
+  #  share: true
 
-  - name: SoundCloud
-    icon: soundcloud
-    username: ""
-    url: ""
-    desc: Follow me on SoundCloud
-    share: false
+  #- name: SoundCloud
+  #  icon: soundcloud
+  #  username: ""
+  #  url: ""
+  #  desc: Follow me on SoundCloud
+  #  share: false
 
   - name: Tumblr
     icon: tumblr
